--- a/src/app/main/project/project.component.html
+++ b/src/app/main/project/project.component.html
@@ -1,5 +1,5 @@
 <div class="ms-project">
-  <app-navbar [navbarIcons]="navbarIcons"></app-navbar>
+  <app-navbar></app-navbar>
 
 
   <div class="grid-task">
