--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,6 @@
 @import './fonts.scss';
+@import './colors.scss';
+@import './devextreme.scss';
 
 * {
   box-sizing: border-box !important;
@@ -17,6 +19,9 @@ body {
 
 .required {
   color: #e8384f !important;
+}
+.active-link {
+  border-bottom: 3px solid #2196f3;
 }
 
 .backgr-white {
@@ -76,142 +81,4 @@ body {
 
 .m-r-8 {
   margin-right: 8px;
-}
-
-//devextreme
-
-.dx-popup-content {
-  padding: 0 !important;
-}
-
-.dx-popup-title {
-  padding: 0 !important;
-  border: none !important;
-}
-
-.dx-theme-generic-typography,
-.dx-overlay-wrapper {
-  font-family: "GoogleSans-Regular", sans-serif;
-  font-size: 15px;
-  color: #1f1f1f !important;
-}
-
-.dx-editor-underlined .dx-texteditor-input {
-  font-family: "GoogleSans-Regular", sans-serif;
-  font-size: 15px;
-  color: #fff !important;
-}
-
-.dx-placeholder {
-  font-family: "GoogleSans-Regular", sans-serif;
-  font-size: 15px;
-}
-
-.dx-texteditor {
-  &.dx-editor-outlined {
-    border-radius: 8px;
-    border: 1px solid #e0e0e0;
-  }
-
-  &.dx-state-hover {
-    box-shadow: 0 1px 5px 2px rgba(0, 0, 0, 0.1);
-    border-color: #2196f3;
-  }
-
-  &.dx-state-focused {
-    &.dx-editor-outlined {
-      box-shadow: 0 1px 5px 2px rgba(0, 0, 0, 0.1);
-      border-color: #2196f3;
-    }
-  }
-}
-
-.dx-overlay-wrapper input,
-.dx-overlay-wrapper textarea {
-  font-family: "GoogleSans-Regular", sans-serif;
-  font-size: 15px;
-}
-
-.dx-texteditor-input {
-  padding: 7px 16px 8px;
-}
-
-.ms-popup {
-  .dx-placeholder {
-    left: 7px;
-    color: #b9b9b9;
-  }
-}
-
-.dx-popup {
-  &-title {
-    border-bottom: none;
-
-    &.dx-toolbar {
-      padding: 16px 24px !important;
-    }
-  }
-
-  &-content {
-    padding: 8px 0;
-  }
-}
-
-.dx-toolbar-label>div {
-  font-size: 24px !important;
-  font-family: "GoogleSans-Bold", sans-serif;
-  overflow: visible;
-}
-
-.dx-toolbar-label .dx-toolbar-item-content>div {
-  overflow: visible;
-}
-
-.dx-button-has-text .dx-button-content {
-  padding-left: 16px;
-  padding-right: 16px;
-}
-
-.dx-button-mode-contained {
-  background-color: #2196f3;
-  color: #fff;
-  border-color: transparent;
-  border-radius: 8px;
-
-  &.dx-state-hover {
-    background-color: #2A7EFC;
-    border-color: #0062CC;
-  }
-}
-
-.dx-datagrid-headers {
-  background: #f2f2f2;
-  border-bottom: none;
-}
-
-.dx-datagrid-borders .dx-datagrid-rowsview,
-.dx-datagrid-headers+.dx-datagrid-rowsview {
-  border-top: none;
-}
-
-.dx-datagrid-headers .dx-datagrid-table .dx-row>td {
-
-  font-size: 16px;
-  font-family: 'GoogleSans-Regular';
-  color: #1f1f1f;
-  padding-left: 16px;
-  font-weight: 600;
-  line-height: 27px;
-}
-
-.dx-datagrid .dx-column-lines>td {
-  border-top: 1px solid #e0e0e0;
-}
-
-.dx-datagrid .dx-row>td {
-  font-size: 15px;
-  font-family: 'GoogleSans-Light';
-  color: #1f1f1f;
-  line-height: 29px;
-  padding-left: 16px;
 }
