ui update popup

--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -3,10 +3,7 @@
 <div class="ms-dashboard">
 
   <!-- Phần navbar -->
-  <app-navbar (isPopupOpen)="openPopup($event)"></app-navbar>
-
-  <!-- Phần popup -->
-  <app-popup-department [isPopupOpen]="isPopupOpen" (isPopupClose)="closePopup($event)"></app-popup-department>
+  <app-navbar></app-navbar>
 </div>
 
 <!-- Phần sidebar -->
