--- a/src/app/main/navbar/navbar.component.scss
+++ b/src/app/main/navbar/navbar.component.scss
@@ -177,7 +177,7 @@
     margin-right: 24px;
   }
 
-  .icon-carret-down {
+  .icon-caret-down {
     width: 16px;
     height: 16px;
     -webkit-mask: url('/assets/img/ICON.svg') no-repeat -232px -104px;
@@ -185,7 +185,7 @@
     background-color: #666;
   }
 
-  .search-icon {
+  .icon-search {
     width: 24px;
     height: 24px;
     margin-left: 24px;
@@ -194,7 +194,7 @@
     background-color: #ffffff;
   }
 
-  .bell-icon {
+  .icon-bell {
     width: 24px;
     height: 24px;
     margin-left: 24px;
@@ -203,7 +203,7 @@
     background-color: #ffffff;
   }
 
-  .info-icon {
+  .icon-info {
     width: 24px;
     height: 24px;
     margin-left: 24px;
@@ -212,7 +212,7 @@
     background-color: #ffffff;
   }
 
-  .setting-icon {
+  .icon-detail {
     width: 24px;
     height: 24px;
     margin-left: 24px;
