--- a/src/app/shared/components/base/popup/popup.component.html
+++ b/src/app/shared/components/base/popup/popup.component.html
@@ -1,17 +1,9 @@
 <dx-popup class="ms-popup" [width]="popupWidth" height="auto" [shadingColor]="'rgba(0, 0, 0, 0.45)'" [dragEnabled]="true"
-  (onHidden)="closePopup()" [visible]="isPopupOpen" contentTemplate="{{currentTemplate}}" titleTemplate="title">
+  (onHidden)="closePopup()" [visible]="isPopupOpen" contentTemplate="currentTemplate" titleTemplate="title">
 
-  <!-- <div *dxTemplate="let data of 'projectTemplate'">
-    <app-popup-project></app-popup-project>
+  <div *dxTemplate="let data of 'currentTemplate'">
+    <ng-content></ng-content>
   </div>
-
-  <div *dxTemplate="let data of 'departmentTemplate'">
-    <app-popup-department></app-popup-department>
-  </div>
-
-  <div *dxTemplate="let data of 'task'">
-    <div>Hello Task</div>
-  </div> -->
   
   <div *dxTemplate="let data of 'title'">
     <div class="popup-header d-flex content-between align-center">
