--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -12,3 +12,8 @@
     src: url('../assets/fonts/GoogleSans-Light.otf');
   }
   
+  @font-face {
+    font-family: 'GoogleSans-Bold';
+    src: url('../assets/fonts/GoogleSans-Bold.otf');
+  }
+  
