--- a/src/app/main/navbar/navbar.component.html
+++ b/src/app/main/navbar/navbar.component.html
@@ -27,7 +27,7 @@
           <div class="icon-user"></div>
         </div>
         <div class="project-title text-overflow">Công việc cá nhân</div>
-        <div class="icon-carret-down"></div>
+        <div class="icon-caret-down"></div>
 
         <!-- Nút setting -->
         <div class="project-setting">
@@ -53,7 +53,7 @@
     <div class="ms-nav__button-group d-flex align-center">
 
       <!-- Nút thêm công việc -->
-      <div class="ms-nav__button ms-nav__button--add d-flex align-center" (click)="openPopup()">
+      <div class="ms-nav__button ms-nav__button--add d-flex align-center" (click)="addTask()">
         <div class="ms-nav__button-icon add"></div>
         Thêm công việc
       </div>
@@ -70,7 +70,7 @@
       <div *dxTemplate="let data of 'content'">
         <dx-list [dataSource]="dropdownIcons">
           <div *dxTemplate="let item of 'item'">
-            <div class="ms-nav__dropdown-item">
+            <div class="ms-nav__dropdown-item" (click)="addFunction(item.iconId)">
               <div class="ms-nav__dropdown-icon {{item.iconClass}}"></div>
               <div>{{item.iconName}}</div>
             </div>
@@ -86,3 +86,12 @@
   </div>
 
 </div>
+
+<app-popup [isPopupOpen]="isPopupOpen" (onPopupHidden)="isPopupOpen = false" [popupWidth]="popupWidth" 
+[popupTitle]="popupTitle">
+  <app-popup-department *ngIf="currentPopupType === popupEnums.PopupDepartment"></app-popup-department>
+
+  <app-popup-project *ngIf="currentPopupType === popupEnums.PopupProject"></app-popup-project>
+
+  <app-popup-task *ngIf="currentPopupType === popupEnums.PopupTask"></app-popup-task>
+</app-popup>
