--- a/src/app/main/report/report.component.scss
+++ b/src/app/main/report/report.component.scss
@@ -1,30 +1,45 @@
 ::ng-deep .ms-report {
-    &.grid-task {
-      width: 100%;
-      height: calc(100vh - 56px);
-      padding: 16px 0 16px 16px;
+  &__main-content {
+
+    box-shadow: 0 1px 3px rgb(0 0 0 / 10%);
+    border-radius: 8px;
+    margin: 24px 24px 24px 24px;
+    padding: 16px 96px 16px 16px;
+    background-color: #fff;
+    box-shadow: inset 0 1px 3px rgb(0 0 0 / 10%);
+
+  }
+
+  &__header {
+    margin-bottom: 31px;
+  }
+
+  &__title {
+    font-family: "GoogleSans-Bold", sans-serif;
+    font-weight: 500;
+    font-size: 17px;
+  }
+
+  .ms-nav {
+    background-color: #fff;
+
+    &--left {
+      &.dashboard {
+        display: none;
+      }
+
+      &.project {
+        display: flex;
+      }
     }
-  
-    .ms-nav {
-      background-color: #fff;
-  
-      &--left {
-        &.dashboard {
-          display: none;
-        }
-  
-        &.project {
-          display: flex;
-        }
-      }
-  
-      &__button {
-        background-color: rgb(33, 147, 243) !important;
-        color: #fff !important;
-      }
-      .nav-icon{
-        background-color: rgb(97, 97, 97) !important;
-      }
+
+    &__button {
+      background-color: rgb(33, 147, 243) !important;
+      color: #fff !important;
+    }
+
+    .nav-icon {
+      background-color: rgb(97, 97, 97) !important;
     }
   }
-  
+}
