--- a/src/app/shared/components/views/department/popup-department/popup-department.component.html
+++ b/src/app/shared/components/views/department/popup-department/popup-department.component.html
@@ -1,9 +1,11 @@
-<app-popup [isPopupOpen]="isPopupOpen" (isPopupClose)="closePopup()">
-    <div class="popup-department">
-      <app-text-field [inputLabel]="popupDepartmentVar.PopupTextFieldNameLabel"
-        [inputPlaceholder]="popupDepartmentVar.PopupTextFieldNamePlaceholder" [isRequired]="true"></app-text-field>
+<div class="popup-department">
+  <app-text-field [inputLabel]="popupDepartmentVar.PopupTextFieldNameLabel"
+    [inputPlaceholder]="popupDepartmentVar.PopupTextFieldNamePlaceholder" [isRequired]="true"></app-text-field>
 
-      <app-text-field [inputLabel]="popupDepartmentVar.PopupTextFieldMemberLabel"
-        [inputPlaceholder]="popupDepartmentVar.PopupTextFieldMemberPlaceholder"></app-text-field>
-    </div>
-</app-popup>
+  <app-text-field [inputLabel]="popupDepartmentVar.PopupTextFieldMemberLabel"
+    [inputPlaceholder]="popupDepartmentVar.PopupTextFieldMemberPlaceholder"></app-text-field>
+
+  <app-popup-footer></app-popup-footer>
+</div>
+
+<app-popup [popupWidth]="popupDepartmentVar.PopupDepartmentWidth"></app-popup>
