--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,29 +1,32 @@
 @mixin background-template {
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-  }
-  
-  @mixin icon-size-default {
-    width: 24px;
-    height: 24px;
-  }
-  
-  @mixin icon-size-large {
-    width: 32px;
-    height: 32px;
-  }
-  
-  @mixin icon-size-small {
-    width: 16px;
-    height: 16px;
-  }
-  
-  @mixin input-box-shadow {
-    box-shadow: 0 1px 5px 2px rgba(0, 0, 0, 0.1);
-  }
-  
-  @mixin table-row-shadow {
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  }
-  
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+@mixin icon-size-default {
+  width: 24px;
+  height: 24px;
+}
+
+@mixin icon-size-large {
+  width: 32px;
+  height: 32px;
+}
+
+@mixin icon-size-small {
+  width: 16px;
+  height: 16px;
+}
+
+@mixin default-box-shadow {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+@mixin input-box-shadow {
+  box-shadow: 0 1px 5px 2px rgba(0, 0, 0, 0.1);
+}
+
+@mixin table-row-shadow {
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
