--- a/src/app/main/project/project.component.html
+++ b/src/app/main/project/project.component.html
@@ -31,17 +31,52 @@
       </div>
     </div>
     <div class="grid-task__content">
-      <dx-data-grid [dataSource]="tasks" keyExpr="TaskID" height=100%>
-        <dxi-column dataField="TaskID" caption="" width=48 alignment="center" [allowSorting]="false"></dxi-column>
-        <dxi-column dataField="TaskName" caption="Tên công việc" width=900 [allowSorting]="false"></dxi-column>
-        <dxi-column class=" d-flex content-center" dataField="TaskStatus" caption="Tình trạng công việc" width=200
-          [allowSorting]="false">
+      <dx-data-grid [dataSource]="tasksData" keyExpr="TaskID" height=100% [allowColumnResizing]="true"
+        [hoverStateEnabled]="true">
+        <dxi-column caption="" width="48" minWidth="48" cellTemplate="cellTemplate" headerCellTemplate="headerTemplate"
+          alignment="center"></dxi-column>
+
+        <div *dxTemplate="let data of 'headerTemplate'">
+          <div class="grid-task__icon add-col"></div>
+        </div>
+
+        <dxi-column *ngFor="let column of taskColumns; trackBy:getColumnId" alignment="left"
+          [caption]="column['ColName']" [dataField]="column['ColField']" [width]="column['ColWidth']"
+          [dataType]="column['ColDataType']" [format]="column['ColFormat']" [cellTemplate]="column['CellTemplate']">
         </dxi-column>
-        <dxi-column dataField="WorkingStatus" caption="Trạng thái hoạt động" width=180 [allowSorting]="false">
-        </dxi-column>
-        <dxi-column dataField="EndDate" dataType="date" caption="Hạn hoàn thành" width=200 [allowSorting]="false">
-        </dxi-column>
-        <dxi-column dataField="AssigneeName" caption="Người thực hiện" [allowSorting]="false"></dxi-column>
+
+        <div *dxTemplate="let data of 'cellTemplate'">
+          {{ getRowId(data) }}
+        </div>
+
+        <!-- Những ô bình thường thể hiện dữ liệu dạng text -->
+        <div *dxTemplate="let data of 'normalCellTemplate'">
+          {{ getData(data) }}
+        </div>
+
+        <!-- Những ô khi nhấn thì hiện popup modal -->
+        <div *dxTemplate="let data of 'popupModalCellTemplate'" (click)="openModal(data)">
+          {{ getData(data) }}
+        </div>
+
+        <!-- Những ô hiển thị dữ liệu có biểu đồ donut -->
+        <div *dxTemplate="let data of 'donutChartCellTemplate'"
+          [ngStyle]="{display: 'flex', alignItems: 'center', gap: '8px'}">
+          <!-- Nếu công việc đã hoàn thành thì chỉ hiển thị dấu check -->
+          <div *ngIf="checkFinished(data)" class="grid-task__icon success"></div>
+
+          <!-- Nếu công việc chưa hoàn thành thì chỉ hiển thị biểu đồ donut -->
+          <app-chart-doughnut *ngIf="!checkFinished(data)" [doughnutSize]="getDoughnutSize()"
+            [doughnutData]="getDoughnutData(data)"></app-chart-doughnut>
+          {{ getDataStatus(data) }}
+        </div>
+
+        <!-- Những ô hiển thị dữ liệu dạng ngày tháng -->
+        <div *dxTemplate="let data of 'dateCellTemplate'"
+          [ngStyle]="{display: 'flex', alignItems: 'center', gap: '8px'}">
+          <div class="grid-task__icon date"></div>
+          {{ getData(data) }}
+        </div>
       </dx-data-grid>
     </div>
   </div>
