--- a/src/app/shared/components/base/popup/popup.component.html
+++ b/src/app/shared/components/base/popup/popup.component.html
@@ -1,5 +1,5 @@
 <dx-popup class="ms-popup" [width]="popupWidth" height="auto" [shadingColor]="'rgba(0, 0, 0, 0.45)'" [dragEnabled]="true"
-  (onHidden)="closePopup()" [visible]="isPopupOpen" contentTemplate="currentTemplate" titleTemplate="title">
+  (onHidden)="closePopup()" [visible]="isPopupOpen" (onShown)="autoFocus()" contentTemplate="currentTemplate" titleTemplate="title">
 
   <div *dxTemplate="let data of 'currentTemplate'">
     <ng-content></ng-content>
