--- a/src/app/shared/components/base/text-field/text-field.component.html
+++ b/src/app/shared/components/base/text-field/text-field.component.html
@@ -1,11 +1,11 @@
 <div class="text-field">
-  <div class="text-field__label">
+  <div class="text-field__label" (click)="setFocus()">
     {{ inputLabel }}
     <span *ngIf="isRequired" class="required">
       *
     </span>
   </div>
 
-  <dx-text-box *ngIf="!textArea" [placeholder]="inputPlaceholder" [height]="textFieldHeight"></dx-text-box>
+  <dx-text-box #name *ngIf="!textArea" [placeholder]="inputPlaceholder" [height]="textFieldHeight"></dx-text-box>
   <dx-text-area *ngIf="textArea" [placeholder]="inputPlaceholder" [height]="textFieldHeight"></dx-text-area>
 </div>
