--- a/src/app/shared/components/views/project/popup-project/popup-project.component.html
+++ b/src/app/shared/components/views/project/popup-project/popup-project.component.html
@@ -1,29 +1,50 @@
-<div class="popup-project">
-  <app-text-field [inputLabel]="popupProjectVar.PopupTextFieldNameLabel"
-    [inputPlaceholder]="popupProjectVar.PopupTextFieldNamePlaceholder" [isRequired]="true"></app-text-field>
 
-  <div class="text-field__group">
-    <app-text-field [inputLabel]="popupProjectVar.PopupTextFieldDepartmentLabel"
-      [inputPlaceholder]="popupProjectVar.PopupTextFieldDepartmentPlaceholder" [ngStyle]="{width: '50%'}"
-      [isRequired]="true"></app-text-field>
+<dx-popup class="ms-popup" [width]="popupWidth" height="auto" [shadingColor]="'rgba(0, 0, 0, 0.45)'"
+  [dragEnabled]="true" (onHidden)="closePopup()" [visible]="isPopupOpen" (onShown)="inputAutoFocus()"
+  contentTemplate="currentTemplate" titleTemplate="title">
 
-    <app-text-field [inputLabel]="popupProjectVar.PopupTextFieldFromDateLabel"
-      [inputPlaceholder]="popupProjectVar.PopupTextFieldFromDatePlaceholder" [ngStyle]="{width: '25%'}">
-    </app-text-field>
+  <div *dxTemplate="let data of 'currentTemplate'">
+    <div class="popup-project">
+      <app-text-field #name [inputLabel]="popupProjectVar.PopupTextFieldNameLabel"
+        [inputPlaceholder]="popupProjectVar.PopupTextFieldNamePlaceholder" [isRequired]="true"></app-text-field>
 
-    <app-text-field [inputLabel]="popupProjectVar.PopupTextFieldToDateLabel"
-      [inputPlaceholder]="popupProjectVar.PopupTextFieldToDatePlaceholder" [ngStyle]="{width: '25%'}"></app-text-field>
+      <div class="text-field__group">
+        <app-text-field [inputLabel]="popupProjectVar.PopupTextFieldDepartmentLabel"
+          [inputPlaceholder]="popupProjectVar.PopupTextFieldDepartmentPlaceholder" [ngStyle]="{width: '50%'}"
+          [isRequired]="true"></app-text-field>
+
+        <app-text-field [inputLabel]="popupProjectVar.PopupTextFieldFromDateLabel"
+          [inputPlaceholder]="popupProjectVar.PopupTextFieldFromDatePlaceholder" [ngStyle]="{width: '25%'}">
+        </app-text-field>
+
+        <app-text-field [inputLabel]="popupProjectVar.PopupTextFieldToDateLabel"
+          [inputPlaceholder]="popupProjectVar.PopupTextFieldToDatePlaceholder" [ngStyle]="{width: '25%'}">
+        </app-text-field>
+      </div>
+
+      <app-text-field [inputLabel]="popupProjectVar.PopupTextFieldDescriptionLabel"
+        [inputPlaceholder]="popupProjectVar.PopupTextFieldDescriptionPlaceholder" [textFieldHeight]="'78px'"
+        [textArea]="true"></app-text-field>
+
+      <app-text-field [inputLabel]="popupProjectVar.PopupTextFieldMemberLabel"
+        [inputPlaceholder]="popupProjectVar.PopupTextFieldMemberPlaceholder"></app-text-field>
+
+
+      <div class="ms-modal__footer">
+        <div class="ms-modal__button--secondary" (click)="closePopup()">
+          {{ popupProjectVar.PopupCloseButton }}
+        </div>
+
+        <app-button [buttonText]="popupProjectVar.PopupSaveButton">
+        </app-button>
+      </div>
+    </div>
   </div>
 
-  <app-text-field [inputLabel]="popupProjectVar.PopupTextFieldDescriptionLabel"
-    [inputPlaceholder]="popupProjectVar.PopupTextFieldDescriptionPlaceholder" [textFieldHeight]="'78px'"
-    [textArea]="true"></app-text-field>
-
-  <app-text-field [inputLabel]="popupProjectVar.PopupTextFieldMemberLabel"
-    [inputPlaceholder]="popupProjectVar.PopupTextFieldMemberPlaceholder"></app-text-field>
-
-  <app-popup-footer></app-popup-footer>
-</div>
-
-<app-popup [popupWidth]="popupProjectVar.PopupProjectWidth">
-</app-popup>
+  <div *dxTemplate="let data of 'title'">
+    <div class="popup-header d-flex content-between align-center">
+      <div class="popup-title">{{popupTitle}}</div>
+      <div class="button-close dx-icon-close" (click)="closePopup()"></div>
+    </div>
+  </div>
+</dx-popup>
