--- a/src/app/shared/components/views/task/popup-task/popup-task.component.html
+++ b/src/app/shared/components/views/task/popup-task/popup-task.component.html
@@ -1,63 +1,82 @@
-<div class="popup__task">
-    <div class="popup__task-container">
-      <div class="popup__task--left">
-        <div class="popup__task-header">
-          <div class="popup__task-header--left">
-            <div class="popup__task-header-dropdown">
-              Cá nhân
+<dx-popup class="ms-popup" [width]="popupWidth" height="auto" [shadingColor]="'rgba(0, 0, 0, 0.45)'"
+  [dragEnabled]="true" (onHidden)="closePopup()" [visible]="isPopupOpen" contentTemplate="currentTemplate" titleTemplate="title">
+
+  <div *dxTemplate="let data of 'currentTemplate'">
+    <div class="popup__task">
+      <div class="popup__task-container">
+        <div class="popup__task--left">
+          <div class="popup__task-header">
+            <div class="popup__task-header--left">
+              <div class="popup__task-header-dropdown">
+                Cá nhân
+              </div>
+
+              <div class="popup__task-header-dropdown">
+                Cần thực hiện
+              </div>
             </div>
-  
-            <div class="popup__task-header-dropdown">
-              Cần thực hiện
+
+            <div class="popup__task-header--right">
+              <div class="popup__task-header-button important"></div>
+              <div class="popup__task-header-button urgent"></div>
             </div>
           </div>
-  
-          <div class="popup__task-header--right">
-            <div class="popup__task-header-button important"></div>
-            <div class="popup__task-header-button urgent"></div>
+
+          <div class="popup__task-input">
+            <input type="text" placeholder="Nhập tên công việc">
+          </div>
+
+          <div class="popup__task-widget">
+            <div class="popup__task-widget-icon desc"></div>
+            Nhập mô tả
+          </div>
+
+          <div class="popup__task-widget">
+            <div class="popup__task-widget-icon add"></div>
+            Thêm checklist
+          </div>
+
+          <div class="popup__task-selector">
+            <div class="popup__task-selector--half">
+              <div class="popup__task-selector-icon assignee"></div>
+              Chọn người thực hiện
+            </div>
+
+            <div class="popup__task-selector--half">
+              <div class="popup__task-selector-icon date"></div>
+              Chọn hạn hoàn thành
+            </div>
+          </div>
+
+          <div class="popup__task-widget">
+            <div class="popup__task-widget-icon add"></div>
+            Thêm công việc con
           </div>
         </div>
-  
-        <div class="popup__task-input">
-          <input type="text" placeholder="Nhập tên công việc">
-        </div>
-  
-        <div class="popup__task-widget">
-          <div class="popup__task-widget-icon desc"></div>
-          Nhập mô tả
-        </div>
-  
-        <div class="popup__task-widget">
-          <div class="popup__task-widget-icon add"></div>
-          Thêm checklist
-        </div>
-  
-        <div class="popup__task-selector">
-          <div class="popup__task-selector--half">
-            <div class="popup__task-selector-icon assignee"></div>
-            Chọn người thực hiện
+
+        <div class="popup__task--right">
+          <div class="popup__task-extra">
+            <div class="popup__task-extra-icon related"></div>
+            Người liên quan
           </div>
-  
-          <div class="popup__task-selector--half">
-            <div class="popup__task-selector-icon date"></div>
-            Chọn hạn hoàn thành
-          </div>
-        </div>
-  
-        <div class="popup__task-widget">
-          <div class="popup__task-widget-icon add"></div>
-          Thêm công việc con
         </div>
       </div>
-  
-      <div class="popup__task--right">
-        <div class="popup__task-extra">
-          <div class="popup__task-extra-icon related"></div>
-          Người liên quan
+
+      <div class="ms-modal__footer">
+        <div class="ms-modal__button--secondary" (click)="closePopup()">
+          {{ popupTaskVar.PopupCloseButton }}
         </div>
+
+        <app-button [buttonText]="popupTaskVar.PopupSaveButton">
+        </app-button>
       </div>
     </div>
-  
-    <app-popup-footer></app-popup-footer>
   </div>
-  
+
+  <div *dxTemplate="let data of 'title'">
+    <div class="popup-header d-flex content-between align-center">
+      <div class="popup-title">{{popupTitle}}</div>
+      <div class="button-close dx-icon-close" (click)="closePopup()"></div>
+    </div>
+  </div>
+</dx-popup>
