--- a/src/styles/devextreme.scss
+++ b/src/styles/devextreme.scss
@@ -158,10 +158,10 @@
 
 .dx-datagrid .dx-row>td {
   font-size: 15px;
-  font-family: 'GoogleSans-Light';
+  font-family: 'GoogleSans-Regular';
   color: #1f1f1f;
   line-height: 29px;
-  padding-left: 16px;
+  padding-left: 30px;
 }
 
 .dx-datagrid-content .dx-datagrid-table .dx-row > td:first-child, .dx-datagrid-content .dx-datagrid-table .dx-row > tr > td:first-child {
